drawing login page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Desk Track</string>
+    <string name="icon_person">Person icon in login view</string>
+    <string name="welcome">Welcome</string>
+    <string name="cif">CIF</string>
+    <string name="psw">Password</string>
+    <string name="login">Login</string>
 </resources>
